@@ -136,6 +136,9 @@
                             <property name="accel">
                                 <string>Alt+O</string>
                             </property>
+                            <property name="default">
+                                <bool>true</bool>
+                            </property>
                         </widget>
                         <spacer>
                             <property name="name">
